@@ -1,0 +1,15 @@
+File:         02packages.details.txt
+URL:          http://www.perl.com/CPAN/modules/02packages.details.txt
+Description:  Package names found in directory $CPAN/authors/id/
+Columns:      package name, version, path
+Intended-For: Automated fetch routines, namespace documentation.
+Written-By:   Id: mldistwatch 697 1970-01-18 07:33:13Z k 
+Line-Count:   9
+Last-Updated: Tue, 03 Feb 1970 03:17:06 GMT
+
+Test::Harness           2.62    P/PE/PETDANCE/Test-Harness-2.62.tar.gz
+Test                    1       T/TE/TEST/Test-Test-1.01.tar.gz
+Test2                   1       T/TE/TEST/Test-Test2-1.02.tar.gz
+Test2::A                1       T/TE/TEST/Test-Test2-1.00.tar.gz
+Test3                   1       T/TE/TEST/Test-Test3-1.01.tar.gz
+Test4                   1       T/TE/TEST/Test-Test4-1.00.tar.gz
