@@ -1,0 +1,12 @@
+35815    2 -rw-rw-rw-   1 user     group        1142 20070101.000000 authors/id/T/TE/TEST/Test-Test-0.01.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20070102.000000 authors/id/T/TE/TEST/Test-Test-1.01.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20090101.000000 authors/id/T/TE/TEST/Test-Test-1.01_01.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20090102.000000 authors/id/T/TE/TEST/Test-Test-1.01_02.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20070101.000002 authors/id/T/TE/TEST/Test-Test2-1.00.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20090101.000002 authors/id/T/TE/TEST/Test-Test2-1.01.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20090102.000002 authors/id/T/TE/TEST/Test-Test2-1.02.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20090103.000002 authors/id/T/TE/TEST/Test-Test2-1.03_01.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20070101.000003 authors/id/T/TE/TEST/Test-Test3-1.01.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20070103.000003 authors/id/T/TE/TEST/Test-Test3-1.03_01.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20090103.000003 authors/id/T/TE/TEST/Test-Test3-1.03_02.tar.gz
+35815    2 -rw-rw-rw-   1 user     group        1142 20070101.000004 authors/id/T/TE/TEST/Test-Test4-1.00.tar.gz
