@@ -6,6 +6,8 @@ Revision history for Perl module CPAN::Reporter::Smoker
 
     - More tests (CHORNY)
 
+    - New experimental option to skip distributions released before some date (CHORNY)
+
 0.27      2015-03-10 04:33:13-04:00 America/New_York
 
     [ADDED]
